final version index menu

--- a/index.html
+++ b/index.html
@@ -53,17 +53,19 @@
     </article>
     <nav>
       <div>
-      <h2>Fonctionnement</h2>
-    </div>
-      <div class="greybutton"><div class="menunumber">1</div>
-        <i class="fa-solid fa-mobile-screen-button fa-xl"></i> Choisissez un
-          restaurant
-        </div>
+        <h2>Fonctionnement</h2>
       </div>
-      <div class="greybutton"><div class="menunumber">2</div>
+      <div class="greybutton">
+        <div class="menunumber">1</div>
+        <i class="fa-solid fa-mobile-screen-button fa-xl"></i> Choisissez un
+        restaurant
+      </div>
+      <div class="greybutton">
+        <div class="menunumber">2</div>
         <i class="fa-solid fa-bars fa-xl"></i>Composez votre menu
       </div>
-      <div class="greybutton"><div class="menunumber">3</div>
+      <div class="greybutton">
+        <div class="menunumber">3</div>
         <i class="fa-solid fa-store fa-xl"></i>Dégustez au restaurant
       </div>
     </nav>
@@ -75,39 +77,36 @@
         <div class="box3">
           <div class="b3">
             <a href="#">Nouveau</a>
-          </div></div>
+          </div>
+        </div>
         <a href="menu.html"
           ><img
             class="menuimage"
             src="./images/lapalettedugout.jpg"
             alt="La palette du gôut"
-        /></a>  
+        /></a>
         <div class="menutext">La palette du gôuts</div>
         <div class="menutext2">Ménilmontant</div>
         <div class="icon">
-          <svg class="heart-main" viewBox="0 0 512 512" width="100" title="heart">
+          <svg class="heart-main" viewBox="0 0 512 512" width="100">
             <path
               d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
             />
           </svg>
-          <svg
-            class="heart-background"
-            viewBox="0 0 512 512"
-            width="100"
-            title="heart"
-          >
+          <svg class="heart-background" viewBox="0 0 512 512" width="100">
             <path
               d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
             />
           </svg>
         </div>
       </div>
-      
+
       <div class="menu">
         <div class="box3">
           <div class="b3">
             <a href="#">Nouveau</a>
-          </div></div>
+          </div>
+        </div>
         <a href="menu.html"
           ><img
             class="menuimage"
@@ -117,17 +116,12 @@
         <div class="menutext">La note enchantée</div>
         <div class="menutext2">Charonne</div>
         <div class="icon">
-          <svg class="heart-main" viewBox="0 0 512 512" width="100" title="heart">
+          <svg class="heart-main" viewBox="0 0 512 512" width="100">
             <path
               d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
             />
           </svg>
-          <svg
-            class="heart-background"
-            viewBox="0 0 512 512"
-            width="100"
-            title="heart"
-          >
+          <svg class="heart-background" viewBox="0 0 512 512" width="100">
             <path
               d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
             />
@@ -138,7 +132,8 @@
         <div class="box3">
           <div class="b3">
             <a href="#">Nouveau</a>
-          </div></div>
+          </div>
+        </div>
         <a href="menu.html"
           ><img
             class="menuimage"
@@ -148,17 +143,12 @@
         <div class="menutext">À la française</div>
         <div class="menutext2">Cité Rouge</div>
         <div class="icon">
-          <svg class="heart-main" viewBox="0 0 512 512" width="100" title="heart">
+          <svg class="heart-main" viewBox="0 0 512 512" width="100">
             <path
               d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
             />
           </svg>
-          <svg
-            class="heart-background"
-            viewBox="0 0 512 512"
-            width="100"
-            title="heart"
-          >
+          <svg class="heart-background" viewBox="0 0 512 512" width="100">
             <path
               d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
             />
@@ -169,7 +159,8 @@
         <div class="box3">
           <div class="b3">
             <a href="#">Nouveau</a>
-          </div></div>
+          </div>
+        </div>
         <a href="menu.html"
           ><img
             class="menuimage"
@@ -179,17 +170,12 @@
         <div class="menutext">Le délice des sens</div>
         <div class="menutext2">Folie-Méricourt</div>
         <div class="icon">
-          <svg class="heart-main" viewBox="0 0 512 512" width="100" title="heart">
+          <svg class="heart-main" viewBox="0 0 512 512" width="100">
             <path
               d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
             />
           </svg>
-          <svg
-            class="heart-background"
-            viewBox="0 0 512 512"
-            width="100"
-            title="heart"
-          >
+          <svg class="heart-background" viewBox="0 0 512 512" width="100">
             <path
               d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
             />
@@ -204,9 +190,12 @@
           alt="On My Food Logo"
           id="logofooter"
       /></a>
-      <div class="footertext"><i class="fa-solid fa-utensils fa-l"></i>
-        Proposer un restaurant</div>
-      <div class="footertext"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</div>
+      <div class="footertext">
+        <i class="fa-solid fa-utensils fa-l"></i> Proposer un restaurant
+      </div>
+      <div class="footertext">
+        <i class="fa-solid fa-handshake-angle"></i>Devenir partenaire
+      </div>
       <div class="footertext">Mentions légales</div>
       <a href="mailto:contact@ohmyfood.com">Contact</a>
     </footer>
