--- a/menu.html
+++ b/menu.html
@@ -45,21 +45,15 @@
             alt="La palette du gôut"
         /></a>
       </div>
-    </div>
-      <div class="child-two child">La palette du goût
-    </div>
+      <h2>La palette du goût</h2>
+      <div class="child-two child">La palette du goût</div>
       <div class="icon">
-        <svg class="heart-main" viewBox="0 0 512 512" width="100" title="heart">
+        <svg class="heart-main" viewBox="0 0 512 512" width="100">
           <path
             d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
           />
         </svg>
-        <svg
-          class="heart-background"
-          viewBox="0 0 512 512"
-          width="100"
-          title="heart"
-        >
+        <svg class="heart-background" viewBox="0 0 512 512" width="100">
           <path
             d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
           />
@@ -75,16 +69,15 @@
               <p>Fricassée d'escargot</p>
             </div>
             <div class="dishtitle">
-              <p>Au piment d'Espelette
-              </p>
+              <p>Au piment d'Espelette</p>
             </div>
           </div>
-            <div class="price">25€</div>
-          </div>
-          <div class="check">
-            <i class="fas fa-check-circle"></i>
-          </div>
+          <div class="price">25€</div>
         </div>
+        <div class="check">
+          <i class="fas fa-check-circle"></i>
+        </div>
+      </div>
       <div class="menu onebyone" id="case-2">
         <div class="menucard">
           <div class="dish">
@@ -92,16 +85,15 @@
               <p>Foie gras de canard mi-cuit</p>
             </div>
             <div class="dishtitle">
-              <p>Et ses copeaux de truffe noire
-              </p>
+              <p>Et ses copeaux de truffe noire</p>
             </div>
           </div>
-            <div class="price">35€</div>
-          </div>
-          <div class="check">
-            <i class="fas fa-check-circle"></i>
-          </div>
+          <div class="price">35€</div>
         </div>
+        <div class="check">
+          <i class="fas fa-check-circle"></i>
+        </div>
+      </div>
       <div class="menu onebyone" id="case-3">
         <div class="menucard">
           <div class="dish">
@@ -109,16 +101,15 @@
               <p>Oeuf au plat</p>
             </div>
             <div class="dishtitle">
-              <p>Assaisonné à la truffe sur lit de caviar
-              </p>
+              <p>Assaisonné à la truffe sur lit de caviar</p>
             </div>
           </div>
-            <div class="price">20€</div>
-          </div>
-          <div class="check">
-            <i class="fas fa-check-circle"></i>
-          </div>
+          <div class="price">20€</div>
         </div>
+        <div class="check">
+          <i class="fas fa-check-circle"></i>
+        </div>
+      </div>
       <div class="child-three child">PLATS</div>
       <div class="menu onebyone" id="case-4">
         <div class="menucard">
@@ -127,16 +118,15 @@
               <p>Filet de boeuf aux herbes</p>
             </div>
             <div class="dishtitle">
-              <p>Accompagné de sa ribambelle de légumes
-              </p>
+              <p>Accompagné de sa ribambelle de légumes</p>
             </div>
           </div>
-            <div class="price">40€</div>
-          </div>
-          <div class="check">
-            <i class="fas fa-check-circle"></i>
-          </div>
+          <div class="price">40€</div>
         </div>
+        <div class="check">
+          <i class="fas fa-check-circle"></i>
+        </div>
+      </div>
       <div class="menu onebyone" id="case-5">
         <div class="menucard">
           <div class="dish">
@@ -144,16 +134,15 @@
               <p>Parmentier de queue de boeuf</p>
             </div>
             <div class="dishtitle">
-              <p>À la truffe noire sur sa purée de panais
-              </p>
+              <p>À la truffe noire sur sa purée de panais</p>
             </div>
           </div>
-            <div class="price">35€</div>
-          </div>
-          <div class="check">
-            <i class="fas fa-check-circle"></i>
-          </div>
+          <div class="price">35€</div>
         </div>
+        <div class="check">
+          <i class="fas fa-check-circle"></i>
+        </div>
+      </div>
       <div class="menu onebyone" id="case-6">
         <div class="menucard">
           <div class="dish">
@@ -161,16 +150,15 @@
               <p>Filet de turbot</p>
             </div>
             <div class="dishtitle">
-              <p>Aux agrumes
-              </p>
+              <p>Aux agrumes</p>
             </div>
           </div>
-            <div class="price">44€</div>
-          </div>
-          <div class="check">
-            <i class="fas fa-check-circle"></i>
-          </div>
+          <div class="price">44€</div>
         </div>
+        <div class="check">
+          <i class="fas fa-check-circle"></i>
+        </div>
+      </div>
       <div class="child-three child">DESSERTS</div>
       <div class="menu onebyone" id="case-7">
         <div class="menucard">
@@ -179,16 +167,15 @@
               <p>Paris-Brest</p>
             </div>
             <div class="dishtitle">
-              <p>Revisité
-              </p>
+              <p>Revisité</p>
             </div>
           </div>
-            <div class="price">18€</div>
-          </div>
-          <div class="check">
-            <i class="fas fa-check-circle"></i>
-          </div>
+          <div class="price">18€</div>
         </div>
+        <div class="check">
+          <i class="fas fa-check-circle"></i>
+        </div>
+      </div>
       <div class="menu onebyone" id="case-8">
         <div class="menucard">
           <div class="dish">
@@ -196,32 +183,29 @@
               <p>Macaron au chocolat d'exception</p>
             </div>
             <div class="dishtitle">
-              <p>Et glace à la vanille de Madagascar
-              </p>
+              <p>Et glace à la vanille de Madagascar</p>
             </div>
           </div>
-            <div class="price">22€</div>
-          </div>
-          <div class="check">
-            <i class="fas fa-check-circle"></i>
-          </div>
+          <div class="price">22€</div>
         </div>
+        <div class="check">
+          <i class="fas fa-check-circle"></i>
+        </div>
+      </div>
       <div class="menu onebyone" id="case-9">
         <div class="menucard">
           <div class="dish">
             <div class="dishname">
-              <p>Mousse au chocolat </p>
+              <p>Mousse au chocolat</p>
             </div>
             <div class="dishtitle">
-              <p>Au piment d'Espelette et à la truffe noire
-              </p>
+              <p>Au piment d'Espelette et à la truffe noire</p>
             </div>
           </div>
-            <div class="price">23€</div>
-          </div>
-          <div class="check">
-            <i class="fas fa-check-circle"></i>
-          </div>
+          <div class="price">23€</div>
+        </div>
+        <div class="check">
+          <i class="fas fa-check-circle"></i>
         </div>
       </div>
     </nav>
