--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oh my Food - Home Page</title>
     <link rel="icon" type="image/x-icon" href="./images/ohmyfood.ico" />
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./sass/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -107,11 +107,11 @@
             <a href="#">Nouveau</a>
           </div>
         </div>
-        <a href="menu.html"
+        <a href="menu2.html"
           ><img
             class="menuimage"
             src="./images/lanoteenchantee.jpg"
-            alt="La palette du gôut"
+            alt="La note enchantée"
         /></a>
         <div class="menutext">La note enchantée</div>
         <div class="menutext2">Charonne</div>
@@ -134,11 +134,11 @@
             <a href="#">Nouveau</a>
           </div>
         </div>
-        <a href="menu.html"
+        <a href="menu3.html"
           ><img
             class="menuimage"
             src="./images/alafrancaise.jpg"
-            alt="La palette du gôut"
+            alt="À la française"
         /></a>
         <div class="menutext">À la française</div>
         <div class="menutext2">Cité Rouge</div>
@@ -161,11 +161,11 @@
             <a href="#">Nouveau</a>
           </div>
         </div>
-        <a href="menu.html"
+        <a href="menu4.html"
           ><img
             class="menuimage"
             src="./images/ledelicedessens.jpg"
-            alt="La palette du gôut"
+            alt="Le délice des sens"
         /></a>
         <div class="menutext">Le délice des sens</div>
         <div class="menutext2">Folie-Méricourt</div>
