--- a/menu4.html
+++ b/menu4.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oh my Food - Menu</title>
-    <link rel="stylesheet" href="./sass/menu.css" />
+    <link rel="stylesheet" href="./menu.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -41,12 +41,14 @@
         <a href="menu.html"
           ><img
             class="child-one"
-            src="./images/lapalettedugout.jpg"
-            alt="La palette du gôut"
-        /></a>
+            src="./images/ledelicedessens.jpg"
+            alt="Le
+          délice des sens"
+          />
+        </a>
       </div>
-      <h2>La palette du goût</h2>
-      <div class="child-two child">La palette du goût</div>
+      <h2>Le délice des sens</h2>
+      <div class="child-two child">Le délice des sens</div>
       <div class="icon">
         <svg class="heart-main" viewBox="0 0 512 512" width="100">
           <path
@@ -66,10 +68,10 @@
         <div class="menucard">
           <div class="dish">
             <div class="dishname">
-              <p>Fricassée d'escargot</p>
+              <p>Tartare de thon</p>
             </div>
             <div class="dishtitle">
-              <p>Au piment d'Espelette</p>
+              <p>Assaisonné au yuzu</p>
             </div>
           </div>
           <div class="price">25€</div>
@@ -82,10 +84,10 @@
         <div class="menucard">
           <div class="dish">
             <div class="dishname">
-              <p>Foie gras de canard mi-cuit</p>
+              <p>Bouchée de homard croustillant</p>
             </div>
             <div class="dishtitle">
-              <p>Et ses copeaux de truffe noire</p>
+              <p>Et sa farandole de petits légumes</p>
             </div>
           </div>
           <div class="price">35€</div>
@@ -98,10 +100,10 @@
         <div class="menucard">
           <div class="dish">
             <div class="dishname">
-              <p>Oeuf au plat</p>
+              <p>Velouté de cèpes</p>
             </div>
             <div class="dishtitle">
-              <p>Assaisonné à la truffe sur lit de caviar</p>
+              <p>Aux truffes</p>
             </div>
           </div>
           <div class="price">20€</div>
@@ -115,10 +117,10 @@
         <div class="menucard">
           <div class="dish">
             <div class="dishname">
-              <p>Filet de boeuf aux herbes</p>
+              <p>Poulet rôti aux herbes de Provence</p>
             </div>
             <div class="dishtitle">
-              <p>Accompagné de sa ribambelle de légumes</p>
+              <p>Et sa crème de truffe</p>
             </div>
           </div>
           <div class="price">40€</div>
@@ -131,10 +133,10 @@
         <div class="menucard">
           <div class="dish">
             <div class="dishname">
-              <p>Parmentier de queue de boeuf</p>
+              <p>Langouste rôtie</p>
             </div>
             <div class="dishtitle">
-              <p>À la truffe noire sur sa purée de panais</p>
+              <p>Et ses légumes de saison</p>
             </div>
           </div>
           <div class="price">35€</div>
@@ -147,10 +149,10 @@
         <div class="menucard">
           <div class="dish">
             <div class="dishname">
-              <p>Filet de turbot</p>
+              <p>Côte de boeuf Angus</p>
             </div>
             <div class="dishtitle">
-              <p>Aux agrumes</p>
+              <p>Et sa purée de panais</p>
             </div>
           </div>
           <div class="price">44€</div>
@@ -164,10 +166,10 @@
         <div class="menucard">
           <div class="dish">
             <div class="dishname">
-              <p>Paris-Brest</p>
+              <p>Farandole de desserts</p>
             </div>
             <div class="dishtitle">
-              <p>Revisité</p>
+              <p>Du chef</p>
             </div>
           </div>
           <div class="price">18€</div>
@@ -180,10 +182,10 @@
         <div class="menucard">
           <div class="dish">
             <div class="dishname">
-              <p>Macaron au chocolat d'exception</p>
+              <p>Crème brulée</p>
             </div>
             <div class="dishtitle">
-              <p>Et glace à la vanille de Madagascar</p>
+              <p>Revisitée</p>
             </div>
           </div>
           <div class="price">22€</div>
@@ -196,10 +198,10 @@
         <div class="menucard">
           <div class="dish">
             <div class="dishname">
-              <p>Mousse au chocolat</p>
+              <p>Tiramisu</p>
             </div>
             <div class="dishtitle">
-              <p>Au piment d'Espelette et à la truffe noire</p>
+              <p>À la noisette</p>
             </div>
           </div>
           <div class="price">23€</div>
