--- a/menu3.html
+++ b/menu3.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oh my Food - Menu</title>
-    <link rel="stylesheet" href="./sass/menu.css" />
+    <link rel="stylesheet" href="./menu.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -41,12 +41,12 @@
         <a href="menu.html"
           ><img
             class="child-one"
-            src="./images/lapalettedugout.jpg"
-            alt="La palette du gôut"
+            src="./images/alafrancaise.jpg"
+            alt="À la française"
         /></a>
       </div>
-      <h2>La palette du goût</h2>
-      <div class="child-two child">La palette du goût</div>
+      <h2>À la française</h2>
+      <div class="child-two child">À la française</div>
       <div class="icon">
         <svg class="heart-main" viewBox="0 0 512 512" width="100">
           <path
@@ -66,10 +66,10 @@
         <div class="menucard">
           <div class="dish">
             <div class="dishname">
-              <p>Fricassée d'escargot</p>
+              <p>Tartare de poulpe acidulé</p>
             </div>
             <div class="dishtitle">
-              <p>Au piment d'Espelette</p>
+              <p>Aux zestes d'orange</p>
             </div>
           </div>
           <div class="price">25€</div>
@@ -82,10 +82,10 @@
         <div class="menucard">
           <div class="dish">
             <div class="dishname">
-              <p>Foie gras de canard mi-cuit</p>
+              <p>Velouté de légumes d'antan</p>
             </div>
             <div class="dishtitle">
-              <p>Et ses copeaux de truffe noire</p>
+              <p>Carotte, panais, topinambour</p>
             </div>
           </div>
           <div class="price">35€</div>
@@ -98,10 +98,10 @@
         <div class="menucard">
           <div class="dish">
             <div class="dishname">
-              <p>Oeuf au plat</p>
+              <p>Soupe à l'oignon</p>
             </div>
             <div class="dishtitle">
-              <p>Assaisonné à la truffe sur lit de caviar</p>
+              <p>Revisitée</p>
             </div>
           </div>
           <div class="price">20€</div>
@@ -115,10 +115,10 @@
         <div class="menucard">
           <div class="dish">
             <div class="dishname">
-              <p>Filet de boeuf aux herbes</p>
+              <p>Coquilles Saint-Jacques</p>
             </div>
             <div class="dishtitle">
-              <p>Accompagné de sa ribambelle de légumes</p>
+              <p>Accompagnées d'une purée de panais</p>
             </div>
           </div>
           <div class="price">40€</div>
@@ -131,10 +131,10 @@
         <div class="menucard">
           <div class="dish">
             <div class="dishname">
-              <p>Parmentier de queue de boeuf</p>
+              <p>Magret de canard</p>
             </div>
             <div class="dishtitle">
-              <p>À la truffe noire sur sa purée de panais</p>
+              <p>Et parmentier de pommes de terre</p>
             </div>
           </div>
           <div class="price">35€</div>
@@ -147,10 +147,10 @@
         <div class="menucard">
           <div class="dish">
             <div class="dishname">
-              <p>Filet de turbot</p>
+              <p>Pigeonneau d’Ille-et-Vilaine</p>
             </div>
             <div class="dishtitle">
-              <p>Aux agrumes</p>
+              <p>Sur son lit de gnocchis aux légumes</p>
             </div>
           </div>
           <div class="price">44€</div>
@@ -164,10 +164,10 @@
         <div class="menucard">
           <div class="dish">
             <div class="dishname">
-              <p>Paris-Brest</p>
+              <p>Pétales de violettes glacés</p>
             </div>
             <div class="dishtitle">
-              <p>Revisité</p>
+              <p>Et purée de noisettes</p>
             </div>
           </div>
           <div class="price">18€</div>
@@ -180,10 +180,10 @@
         <div class="menucard">
           <div class="dish">
             <div class="dishname">
-              <p>Macaron au chocolat d'exception</p>
+              <p>Fondant au chocolat</p>
             </div>
             <div class="dishtitle">
-              <p>Et glace à la vanille de Madagascar</p>
+              <p>Revisité</p>
             </div>
           </div>
           <div class="price">22€</div>
@@ -196,10 +196,10 @@
         <div class="menucard">
           <div class="dish">
             <div class="dishname">
-              <p>Mousse au chocolat</p>
+              <p>Millefeuille croustillant</p>
             </div>
             <div class="dishtitle">
-              <p>Au piment d'Espelette et à la truffe noire</p>
+              <p>Myrtilles et pâte d’amande</p>
             </div>
           </div>
           <div class="price">23€</div>
