--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     ></script>
   </head>
   <body>
-    <div class="bowlbackground">
-      <div class="bowl">
-        <div class="bowlinside"></div>
+    <div class="platebackground">
+      <div class="plate">
+        <div class="plateinside"></div>
       </div>
     </div>
     <header>
