Final Version with Sass

--- a/index.html
+++ b/index.html
@@ -74,10 +74,8 @@
     </div>
     <main>
       <div class="menu">
-        <div class="box3">
-          <div class="b3">
-            <a href="#">Nouveau</a>
-          </div>
+        <div class="greenbox">
+          <a href="#">Nouveau</a>
         </div>
         <a href="menu.html"
           ><img
@@ -102,10 +100,8 @@
       </div>
 
       <div class="menu">
-        <div class="box3">
-          <div class="b3">
-            <a href="#">Nouveau</a>
-          </div>
+        <div class="greenbox">
+          <a href="#">Nouveau</a>
         </div>
         <a href="menu2.html"
           ><img
@@ -129,10 +125,8 @@
         </div>
       </div>
       <div class="menu">
-        <div class="box3">
-          <div class="b3">
-            <a href="#">Nouveau</a>
-          </div>
+        <div class="greenbox">
+          <a href="#">Nouveau</a>
         </div>
         <a href="menu3.html"
           ><img
@@ -156,10 +150,8 @@
         </div>
       </div>
       <div class="menu">
-        <div class="box3">
-          <div class="b3">
-            <a href="#">Nouveau</a>
-          </div>
+        <div class="greenbox">
+          <a href="#">Nouveau</a>
         </div>
         <a href="menu4.html"
           ><img
