--- a/menu3.html
+++ b/menu3.html
@@ -46,7 +46,7 @@
         /></a>
       </div>
       <h2>À la française</h2>
-      <div class="child-two child">À la française</div>
+      <div class="child-two">À la française</div>
       <div class="icon">
         <svg class="heart-main" viewBox="0 0 512 512" width="100">
           <path
@@ -61,7 +61,7 @@
       </div>
     </article>
     <nav>
-      <div class="child-three child">ENTRÉES</div>
+      <div class="child-three">ENTRÉES</div>
       <div class="menu onebyone" id="case-1">
         <div class="menucard">
           <div class="dish">
@@ -110,7 +110,7 @@
           <i class="fas fa-check-circle"></i>
         </div>
       </div>
-      <div class="child-three child">PLATS</div>
+      <div class="child-three">PLATS</div>
       <div class="menu onebyone" id="case-4">
         <div class="menucard">
           <div class="dish">
@@ -159,7 +159,7 @@
           <i class="fas fa-check-circle"></i>
         </div>
       </div>
-      <div class="child-three child">DESSERTS</div>
+      <div class="child-three">DESSERTS</div>
       <div class="menu onebyone" id="case-7">
         <div class="menucard">
           <div class="dish">
