--- a/menu4.html
+++ b/menu4.html
@@ -48,7 +48,7 @@
         </a>
       </div>
       <h2>Le délice des sens</h2>
-      <div class="child-two child">Le délice des sens</div>
+      <div class="child-two">Le délice des sens</div>
       <div class="icon">
         <svg class="heart-main" viewBox="0 0 512 512" width="100">
           <path
@@ -63,7 +63,7 @@
       </div>
     </article>
     <nav>
-      <div class="child-three child">ENTRÉES</div>
+      <div class="child-three">ENTRÉES</div>
       <div class="menu onebyone" id="case-1">
         <div class="menucard">
           <div class="dish">
@@ -112,7 +112,7 @@
           <i class="fas fa-check-circle"></i>
         </div>
       </div>
-      <div class="child-three child">PLATS</div>
+      <div class="child-three">PLATS</div>
       <div class="menu onebyone" id="case-4">
         <div class="menucard">
           <div class="dish">
@@ -161,7 +161,7 @@
           <i class="fas fa-check-circle"></i>
         </div>
       </div>
-      <div class="child-three child">DESSERTS</div>
+      <div class="child-three">DESSERTS</div>
       <div class="menu onebyone" id="case-7">
         <div class="menucard">
           <div class="dish">
